--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,80 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+title:            Raphael Seher
+description:      I'm an app developer from Villach, Austria. Talk with me about iOS & Android development, UI/UX and everything new.
+disqus_shortname: Raphael
+reading_time:     true
+words_per_minute: 200
+# Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
+# When testing locally leave blank or use http://localhost:4000
+url: www.raphaelseher.at
 
-# Site settings
-title: Raphael Seher
-email: raphael.seher@gmail.com
-description: Raphael Seher is a app developer in Carinthia, Austria. Currently working at xamoom (xamoom.com). I'm interested in developing for iOS and Android, designing, UI/UX and photography.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.raphaelseher.at" # the base hostname & protocol for your site
-twitter_username: raphaelseher
-github_username:  raphaelseher
+# Owner/author information
+owner:
+  name:           Raphael Seher
+  avatar:         raphael.jpg
+  bio:            I'm an app developer from Villach, Austria.
+  email:          raphael.seher@gmail.com
+  # Social networking links used in footer. Update and remove as you like.
+  twitter:        raphaelseher
+  github:         raphaelseher
+  #stackexchange:  Rags93
+  #linkedin:
+  instagram:      raphaelseher
+  # flickr:
+  # tumblr:
+  # google plus id, include the '+', eg +mmistakes
+  # google_plus:
 
-# Build settings
-markdown: kramdown
+# Background image to be tiled on all pages
+background:
+
+# Analytics and webmaster tools stuff goes here
+google_analytics:
+google_verify:
+# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
+# bing_verify:
+
+# http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone:    Europe/Berlin
+future:      true
+highlighter: rouge
+markdown:    kramdown
+gems:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jekyll-gist
+sass:
+  sass_dir: _sass
+  style: compressed
+
+# https://github.com/mojombo/jekyll/wiki/Permalinks
+permalink:   /:categories/:title/
+
+# Amount of post to show on home page
+paginate: 5
+
+kramdown:
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  enable_coderay: false
+
+  coderay:
+    coderay_line_numbers: nil
+    coderay_line_numbers_start: 1
+    coderay_tab_width: 4
+    coderay_bold_every: 10
+    coderay_css: class
+
+# Octopress
+# Default extensions
+post_ext: md
+page_ext: md
+# Found in _templates/
+post_layout: post
+page_layout: page
+# Format titles with titlecase?
+titlecase: true
+
+include: [".htaccess"]
+exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
