--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: www.raphaelseher.at
+url: http://www.raphaelseher.at
 baseurl: ""
 
 # Owner/author information
