--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 # Site settings
-title: Raphael Seher
+title: "// TODO: @raphi" 
 tagline: ""
 url: "http://raphaelseher.at"
 author_name: "Raphael Seher"
+meta_title: "Raphael Seher - Web- & App-Developer"
 
 # Social
 socialimg: /img/profil.jpg 
@@ -12,6 +13,30 @@ instagram: raphaelseher
 
 # Contact
 email: "raphael.seher@gmail.com" # This is my real email address. Please don't email me.
+
+markdown: kramdown
+# !github-pages! mandatory › https://help.github.com/articles/using-jekyll-with-pages/#configuration-settings-you-cannot-change
+# Since Jekyll 3 the default highlighter is Rouge (replaced Pygments.rb in v44)
+highlighter: rouge
+
+# More › http://kramdown.gettalong.org/quickref.html
+# Options › http://kramdown.gettalong.org/options.html
+kramdown:
+  input:          GFM
+  # https://github.com/jekyll/jekyll/pull/4090
+  syntax_highlighter: rouge
+
+  # Rouge Highlighter in Kramdown › http://kramdown.gettalong.org/syntax_highlighter/rouge.html
+  # span, block element options fall back to global
+  syntax_highlighter_opts:
+    # Rouge Options › https://github.com/jneen/rouge#full-options
+    css_class: 'highlight'
+    #line_numbers: true # bad idea, spans don't need linenos and would inherit this option
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
 
 # Use this for production
 sass:
